--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,8 @@
       "import/prefer-default-export": "off",
       "import/no-extraneous-dependencies": "off",
       "react/jsx-props-no-spreading": "off",
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "no-console" : "off"
     },
     "settings": {
       "import/resolver": {
