--- a/package.json
+++ b/package.json
@@ -14,22 +14,23 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@testing-library/react-native": "^7.2.0",
+    "@types/jest": "^26.0.22",
     "@types/react-native-vector-icons": "^6.4.6",
     "axios": "^0.21.1",
+    "jest": "^26.6.3",
     "react": "17.0.1",
-    "react-infinite-scroller": "^1.2.4",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
-    "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
     "@babel/runtime": "^7.13.10",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^4.0.1",
     "@types/axios": "^0.14.0",
     "@types/react": "^17.0.3",
     "@types/react-infinite-scroller": "^1.2.1",
@@ -53,6 +54,17 @@
     "typescript": "^4.2.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
